[tool.poetry]
name = "dojo-gen-ai"
version = "0.1.0"
description = ""
authors = ["gozineb <zinebe@theodo.fr>"]
readme = "README.md"
packages = [{include = "dojo_gen_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit-audiorec = "^0.1.3"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
